--- a/app/views/custom/welcome/_sidebar.html.erb
+++ b/app/views/custom/welcome/_sidebar.html.erb
@@ -50,12 +50,18 @@
       <div class="card-section--divider"> </div>
 
       <div>
+        <i class="far fa-lightbulb">
+        </i>
         Zur Übersicht aller Vorschläge
       </div>
       <div>
+        <i class="far fa-comments">
+        </i>
         Zur Übersicht aller Diskussionen
       </div>
       <div>
+        <i class="far fa-vote-yea">
+        </i>
         Zur Übersicht aller Abstimmungen
       </div>
     </div>
