--- a/app/assets/stylesheets/custom_design_v2/_resources_list.scss
+++ b/app/assets/stylesheets/custom_design_v2/_resources_list.scss
@@ -1,177 +1,158 @@
-@media (max-width: 970px) {
-  .resources-list {
-    .resources-list--switch-view-button {
-      display: none;
-    }
-  }
-}
-
-.resources-list--title {
-  // font-size: 30px;
-  font-size: 28px;
-  margin-bottom: 0;
-}
-
-.resources-list--navigation {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 10px;
-}
-
-.resources-list--line-divider {
-  height: 1px;
-  // width: 100%;
-  flex-grow: 1;
-  background: #c7c7c7;
-  margin-right: 17px;
-  margin-top: 9px;
-}
-
-.resources-list--sort {
-  display: flex;
-  white-space: nowrap;
-  // width: 220px;
-
-  // .dropdown-container {
-  //   width: 100%;
-  // }
-}
-
-.resources-list--sort-label {
-  color: #919191;
-}
-
-.resources-list--switch-view-button {
-  width: 30px;
-  height: 30px;
-  margin-left: 20px;
-  background: white;
-  border: 1px solid #D9D9D9;
-  border-radius: 10px;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #707070;
-  transition: 200ms background ease;
-}
-
-
-
-
-.dropdown-container {
-  margin: 0 auto;
-}
-
-/* Dropdown menu css */
-.dropdown-container {
-  position: relative;
-
-  .dropdown-toggle {
-    font-size: 16px;
-    padding-right: 20px;
-    font-weight: 600;
-    cursor: pointer;
-    position: relative;
-    transition: all ease-in-out 0.3s;
-    user-select: none;
-
-    label {
-      cursor: pointer;
-      width: 100%;
-    }
-
-    &:hover,
-    &:active,
-    &:focus {
-    }
-  }
-
-  .dropdown-menu {
-    // width: 100%;
-    width: max-content;
-    border-radius: 10px;
-    box-shadow: 0px 0px 4px -2px rgba(0, 0, 0, 0.5);
-    margin-top: 5px;
-    position: absolute;
-    right: 0;
-    top: 100%;
-    display: none;
-    background-color: #ffffff;
-    z-index: 10;
-
-    ul {
-      list-style: none;
-      margin: 0;
-      overflow: hidden;
-      border-radius: 10px;
-      z-index: 10;
-      user-select: none;
-    }
-
-    li {
-      text-decoration: none;
-      display: block;
-      font-size: 15px;
-      transition: all ease-in-out 0.1s;
-      padding: 5px 12px;
-      cursor: pointer;
-
-      &:hover,
-      &:active,
-      &:focus {
-        background-color: #f2f2f2;
-        // color: #ffffff;
+.new-custom-design {
+  @media (max-width: 970px) {
+    .resources-list {
+      .resources-list--switch-view-button {
+        display: none;
       }
     }
   }
-}
 
-.dropdown-toggle {
-  position: relative;
-
-  &::before {
-    content: "";
-    position: absolute;
-    right: 0;
-    top: 50%;
-    transform: translateY(-50%) rotate(45deg);
-    border: 5px solid;
-    border-top-color: rgba(0, 0, 0, 0);
-    border-left-color: rgba(0, 0, 0, 0);
-    margin-top: -2.5px;
-    background-color: rgba(0, 0, 0, 0);
-    transition: all ease-in-out 0.2s;
+  .resources-list--title {
+    // font-size: 30px;
+    font-size: 28px;
+    margin-bottom: 0;
   }
-}
 
-.dropdown-menu {
-  z-index: 10;
-  position: relative;
-  width: 107%;
-
-  // &::before {
-  //   z-index: -1;
-  //   right: -3px;
-  //   transform: rotate(-135deg);
-  //   top: -4px;
-  //   border-color: #ffffff;
-  //   box-shadow: 1px 1px 4px -2px rgba(0, 0, 0, 0.4);
-  // }
-}
-
-.dropdown-open {
-  .dropdown-menu.dropdown-active {
-    display: block;
+  .resources-list--navigation {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 10px;
   }
-}
 
-.dropdown-container.dropdown-open {
-  .dropdown-toggle {
+  .resources-list--line-divider {
+    height: 1px;
+    // width: 100%;
+    flex-grow: 1;
+    background: #c7c7c7;
+    margin-right: 17px;
+    margin-top: 9px;
+  }
 
-    &:before {
-      transform: rotate(-135deg);
+  .resources-list--sort {
+    display: flex;
+    white-space: nowrap;
+    // width: 220px;
+
+    // .dropdown-container {
+      //   width: 100%;
+      // }
     }
-  }
+
+    .resources-list--sort-label {
+      color: #919191;
+    }
+
+    .resources-list--switch-view-button {
+      width: 30px;
+      height: 30px;
+      margin-left: 20px;
+      background: white;
+      border: 1px solid #D9D9D9;
+      border-radius: 10px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #707070;
+      transition: 200ms background ease;
+    }
+
+
+
+
+    .dropdown-container {
+      margin: 0 auto;
+    }
+
+    /* Dropdown menu css */
+    .dropdown-container {
+      position: relative;
+
+      .dropdown-toggle {
+        font-size: 16px;
+        padding-right: 20px;
+        font-weight: 600;
+        cursor: pointer;
+        position: relative;
+        transition: all ease-in-out 0.3s;
+        user-select: none;
+      }
+
+      .dropdown-menu {
+        width: max-content;
+        border-radius: 10px;
+        box-shadow: 0px 0px 4px -2px rgba(0, 0, 0, 0.5);
+        margin-top: 5px;
+        position: absolute;
+        right: 0;
+        top: 100%;
+        display: none;
+        background-color: #ffffff;
+        z-index: 10;
+
+        ul {
+          list-style: none;
+          margin: 0;
+          overflow: hidden;
+          border-radius: 10px;
+          z-index: 10;
+          user-select: none;
+        }
+
+        li {
+          text-decoration: none;
+          display: block;
+          font-size: 15px;
+          transition: all ease-in-out 0.1s;
+          padding: 5px 12px;
+          cursor: pointer;
+
+          &:hover,
+          &:active,
+          &:focus {
+            background-color: #f2f2f2;
+          }
+        }
+      }
+    }
+
+    .dropdown-toggle {
+      position: relative;
+
+      &::before {
+        content: "";
+        position: absolute;
+        right: 0;
+        top: 50%;
+        transform: translateY(-50%) rotate(45deg);
+        border: 5px solid;
+        border-top-color: rgba(0, 0, 0, 0);
+        border-left-color: rgba(0, 0, 0, 0);
+        margin-top: -2.5px;
+        background-color: rgba(0, 0, 0, 0);
+        transition: all ease-in-out 0.2s;
+      }
+    }
+
+    .dropdown-menu {
+      z-index: 10;
+      position: relative;
+      width: 107%;
+    }
+
+    .dropdown-open {
+      .dropdown-menu.dropdown-active {
+        display: block;
+      }
+    }
+
+    .dropdown-container.dropdown-open {
+      .dropdown-toggle {
+
+        &:before {
+          transform: rotate(-135deg);
+        }
+      }
+    }
 }
