--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
     <%= raw setting["html.per_page_code_head"] %>
   </head>
-  <body class="<%= yield(:body_class) %> public">
+  <body class="<%= yield(:body_class) %> new-custom-design public">
     <%= raw setting["html.per_page_code_body"] %>
 
     <%= render "layouts/header", with_subnavigation: true %>
