--- a/app/views/custom/welcome/index.html.erb
+++ b/app/views/custom/welcome/index.html.erb
@@ -21,7 +21,19 @@
 
   <% if @active_projekts.any? %>
     <div class="d-flex u-flex-container">
-      <%= render Shared::ResourcesList.new(resources: @active_projekts, title: t("custom.welcome.active_projekt_cards.title"), wide: false) %>
+      <%= render Shared::ResourcesList.new(resources: @active_projekts, title: t("custom.welcome.active_projekt_cards.title"), wide: false) do |c| %>
+        <% c.additional_top_content do %>
+          <div class="map resources-list--projekt-map not-print">
+            <%= render_map(MapLocation.new(latitude: Setting['map.latitude'], longitude: Setting['map.longitude'], zoom: Setting['map.zoom']), "projekts", false, nil, @active_projekts_map_coordinates, MapLayer.general.to_json) %>
+          </div>
+          <div class='expand-overview-map-wrapper'>
+            <div class='expand-overview-map small js-expand-overview-map not-print wide'>
+              <%= t('custom.proposals.index.show_larger_map') %>
+            </div>
+          </div>
+
+        <% end %>
+      <% end %>
       <%= render 'sidebar'  %>
     </div>
     <div class="d-flex u-flex-container">
