--- a/app/components/custom/shared/dropdown_menu_component.html.erb
+++ b/app/components/custom/shared/dropdown_menu_component.html.erb
@@ -1,4 +1,4 @@
-<div class="dropdown-container" data-name="<%= @name %>">
+<div class="dropdown-container js-dropdown" data-name="<%= @name %>">
 
   <div class="dropdown-toggle click-dropdown">
     <%= @options.first[1] %>
@@ -6,7 +6,7 @@
   <div class="dropdown-menu">
     <ul>
     <% @options.each do |option| %>
-      <li data-value="<%= option[0] %>" class="<%= @item_class_name %>" >
+      <li data-name="<%= @name %>" data-value="<%= option[0] %>" class="js-dropdown-item <%= @item_css_class %>" >
         <%= option[1] %>
       </li>
     <% end %>
