--- a/app/components/custom/shared/resources_list.html.erb
+++ b/app/components/custom/shared/resources_list.html.erb
@@ -1,4 +1,4 @@
-<div class="u-main-column resources-list <%= class_names %>">
+<div class="u-main-column resources-list <%= class_names %>" data-resources-url="<%= @resources_url %>">
   <h3 class="resources-list--title"><%= @title %></h3>
 
   <div class="resources-list--navigation">
