--- a/app/components/custom/shared/resources_list.html.erb
+++ b/app/components/custom/shared/resources_list.html.erb
@@ -1,4 +1,4 @@
-<div class="u-main-column resources-list <%= class_names %>" data-resources-url="<%= @resources_url %>">
+<div class="u-main-column resources-list js-resources-list <%= class_names %>" data-resources-url="<%= @resources_url %>">
   <h3 class="resources-list--title"><%= @title %></h3>
 
   <div class="resources-list--navigation">
@@ -21,7 +21,7 @@
     </div>
   </div>
 
-  <div class="resources-list--body">
+  <div class="resources-list--body js-resources-list--body">
     <% if additional_top_content.present? %>
       <div class="resources-list--additional-top-content">
         <%= additional_top_content %>
