--- a/app/components/custom/shared/resources_list.html.erb
+++ b/app/components/custom/shared/resources_list.html.erb
@@ -22,9 +22,9 @@
   </div>
 
   <div class="resources-list--body js-resources-list--body">
-    <% if additional_top_content.present? %>
-      <div class="resources-list--additional-top-content">
-        <%= additional_top_content %>
+    <% if @map_coordinates.present? %>
+      <div class="map resources-list--map not-print">
+        <%= helpers.render_map(MapLocation.new(latitude: Setting['map.latitude'], longitude: Setting['map.longitude'], zoom: Setting['map.zoom']), @resources_name, false, nil, @map_coordinates, MapLayer.general.to_json) %>
       </div>
     <% end %>
 
