--- a/app/views/custom/projekts/list.js.erb
+++ b/app/views/custom/projekts/list.js.erb
@@ -1,3 +1,3 @@
-$(".js-projekts-list .js-resources-list--body").html("<%= j render(Projekts::List.new(projekts: @projekts, projekt_map_coordinates: @map_coordinates)) %>");
+$(".js-projekts-list .js-resources-list--body").html("<%= j render(Projekts::List.new(projekts: @projekts, projekt_map_coordinates: @map_coordinates, content_only: true)) %>");
 
 App.Map.initialize()
