--- a/app/components/custom/shared/resources_list.html.erb
+++ b/app/components/custom/shared/resources_list.html.erb
@@ -27,6 +27,7 @@
           Shared::DropdownMenuComponent.new(
             name: @filter_param,
             options: @filter_options,
+            selected_option: @current_filter_option,
             item_css_class: 'js-resource-list-filter-dropdown-item'
           )
         )
