--- a/app/assets/stylesheets/custom_design_v2/_resources_list.scss
+++ b/app/assets/stylesheets/custom_design_v2/_resources_list.scss
@@ -39,6 +39,11 @@
       // }
     }
 
+    .resources-list--sort-title {
+      color: #919191;
+      margin-right: 12px;
+    }
+
     .resources-list--sort-label {
       color: #919191;
     }
