--- a/app/components/custom/shared/resources_list.html.erb
+++ b/app/components/custom/shared/resources_list.html.erb
@@ -23,6 +23,9 @@
 
       </div>
       <div class="resources-list--sort">
+        <div class="resources-list--sort-title">
+          Sortieren nach:
+        </div>
         <%= render(
           Shared::DropdownMenuComponent.new(
             name: @filter_param,
