--- a/app/assets/stylesheets/custom_design_v2/_resources_list.scss
+++ b/app/assets/stylesheets/custom_design_v2/_resources_list.scss
@@ -35,43 +35,47 @@
     // width: 220px;
 
     // .dropdown-container {
-      //   width: 100%;
-      // }
-    }
+    //   width: 100%;
+    // }
 
-    .resources-list--sort-title {
-      color: #919191;
-      margin-right: 12px;
+    .dropdown-menu {
+      z-index: 10000;
     }
+  }
 
-    .resources-list--sort-label {
-      color: #919191;
+  .resources-list--sort-title {
+    color: #919191;
+    margin-right: 12px;
+  }
+
+  .resources-list--sort-label {
+    color: #919191;
+  }
+
+  .resources-list--switch-view-button {
+    width: 30px;
+    height: 30px;
+    margin-left: 20px;
+    background: white;
+    border: 1px solid #D9D9D9;
+    border-radius: 10px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #707070;
+    transition: 200ms background ease;
+  }
+
+  .resources-list--map {
+    margin-bottom: 20px;
+    border-radius: 12px;
+    overflow: hidden;
+
+    .map_location {
+      height: 530px;
     }
-
-    .resources-list--switch-view-button {
-      width: 30px;
-      height: 30px;
-      margin-left: 20px;
-      background: white;
-      border: 1px solid #D9D9D9;
-      border-radius: 10px;
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: #707070;
-      transition: 200ms background ease;
-    }
-
-    .resources-list--map {
-      margin-bottom: 20px;
-      border-radius: 12px;
-      overflow: hidden;
-
-      .map_location {
-        height: 530px;
-      }
-    }
+  }
 }
 
 
