--- a/app/assets/stylesheets/custom_design_v2/_resource_item.scss
+++ b/app/assets/stylesheets/custom_design_v2/_resource_item.scss
@@ -7,7 +7,7 @@
     width: 300px;
     border-radius: 12px;
     background: white;
-    margin-bottom: 25px;
+    // margin-bottom: 25px;
     overflow: hidden;
     color: $main-text-color;
     font-size: 14px;
