--- a/app/assets/stylesheets/custom_design_v2/_base.scss
+++ b/app/assets/stylesheets/custom_design_v2/_base.scss
@@ -306,6 +306,7 @@ body.new-custom-design > header, .new-custom-design .wrapper > header {
     // display: flex;
     // justify-content: space-between;
     // flex-wrap: wrap;
+    margin-bottom: 30px;
   }
 
   .u-flex-container {
