--- a/app/assets/stylesheets/custom_design_v2/_base.scss
+++ b/app/assets/stylesheets/custom_design_v2/_base.scss
@@ -34,6 +34,7 @@ body.new-custom-design > header .locale.locale-custom,
     // margin-right: calc(40vw - 37.5rem);
     // max-width: 1200px;
     max-width: 1245px;
+    width: 100%;
     margin: auto;
   }
 
@@ -42,6 +43,7 @@ body.new-custom-design > header .locale.locale-custom,
     // max-width: 1050px;
     // max-width: 1150px;
     max-width: 1245px;
+    width: 100%;
   }
 }
 
