--- a/app/assets/stylesheets/custom_design_v2/pages/projekts/index.scss
+++ b/app/assets/stylesheets/custom_design_v2/pages/projekts/index.scss
@@ -8,7 +8,9 @@
   }
 
   .projekts-overview-page--projekts-list {
-
-    margin-top: 30px;
   }
+}
+
+.projekts-overview-page--heading {
+  margin-bottom: 30px;
 }
