--- a/app/views/custom/projekts/index.html.erb
+++ b/app/views/custom/projekts/index.html.erb
@@ -1,5 +1,5 @@
 <main class="projekts-page projekts-overview-page">
-  <div class="u-main-column">
+  <div class="u-main-column projekts-overview-page--heading">
     <h1 class='projekts-overview-page--title'>
       <%= t('custom.projekts.index.title') %>
     </h1>
@@ -30,25 +30,17 @@
         </div>
       </div>
 
-      <div class="sidebar-card">
-        <div class="sidebar-card--section">
-          <h4 class="sidebar-card--header">
-            <i class="fas fa-bullhorn"></i>
-            Tags
-          </h4>
-          <%= render "shared/categories", taggable: "projekt" %>
+      <%if @categories.any? && extended_feature?("modulewide.enable_categories") %>
+        <div class="sidebar-card">
+          <div class="sidebar-card--section">
+            <h4 class="sidebar-card--header">
+              <i class="fas fa-bullhorn"></i>
+              Tags
+            </h4>
+            <%= render Shared::CategoriesFilterComponent.new(categories: @categories) %>
+          </div>
         </div>
-      </div>
-
-      <div class="sidebar-card">
-        <div class="sidebar-card--section">
-          <h4 class="sidebar-card--header">
-            <i class="fas fa-bullhorn"></i>
-            Tags
-          </h4>
-          <%= render "shared/tag_cloud", taggable: "projekt" %>
-        </div>
-      </div>
+      <% end %>
 
       <div class="sidebar-card">
         <div class="sidebar-card--section">
@@ -61,13 +53,6 @@
           <% end %>
         </div>
       </div>
-    </div>
-
-    <div class='projekt-sidebar column small-12 medium-3'>
-      <% if show_affiliation_filter_in_sidebar? %>
-        <%= render "shared/sidebar_filter/geozone_affiliations" %>
-      <% end %>
-
     </div>
   </div>
 
