--- a/app/assets/stylesheets/custom_design_v2/_sidebar.scss
+++ b/app/assets/stylesheets/custom_design_v2/_sidebar.scss
@@ -1,41 +1,43 @@
-.sidebar-card--section {
-  padding: 20px 28px;
-}
-
-.sidebar-card--header {
-  font-size: 16px;
-  margin-bottom: 8px;
-  color: black;
-
-  i {
-    margin-right: 3px;
-    color: #003A71;
+.new-custom-design {
+  .sidebar-card--section {
+    padding: 20px 25px;
   }
-}
 
+  .sidebar-card--header {
+    font-size: 16px;
+    margin-bottom: 8px;
+    color: black;
 
-.sidebar-card--section + .sidebar-card--section {
-  border-top: 1px solid #D9D9D9;
-}
-
-.sidebar-active-users-section {
-  i {
-    width: 15px;
-    margin-right: 5px;
+    i {
+      margin-right: 3px;
+      color: #003A71;
+    }
   }
-}
 
-.sidebar-card {
-  background: white;
-  border-radius: 10px;
-  // border: 1px solid #D9D9D9;
-  border: 1px solid #d9d9d9b3;
-  margin-bottom: 15px;
-  color: $main-text-color;
-  font-size: 14px;
-}
 
-.sidebar {
-  min-width: 300px;
-  max-width: 300px;
+  .sidebar-card--section + .sidebar-card--section {
+    border-top: 1px solid #D9D9D9;
+  }
+
+  .sidebar-active-users-section {
+    i {
+      width: 15px;
+      margin-right: 5px;
+    }
+  }
+
+  .sidebar-card {
+    background: white;
+    border-radius: 10px;
+    // border: 1px solid #D9D9D9;
+    border: 1px solid #d9d9d9b3;
+    margin-bottom: 15px;
+    color: $main-text-color;
+    font-size: 14px;
+  }
+
+  .sidebar {
+    min-width: 300px;
+    max-width: 300px;
+  }
 }
