--- a/app/assets/stylesheets/custom_design_v2/_resource_item.scss
+++ b/app/assets/stylesheets/custom_design_v2/_resource_item.scss
@@ -106,6 +106,11 @@
     align-items: flex-start;
   }
 
+  .resources-list--not-items-message {
+    width: 100%;
+    margin-top: 20px;
+  }
+
   .resource-item--tags-in-body {
     display: none;
   }
