--- a/app/assets/stylesheets/custom_design_v2/_sidebar.scss
+++ b/app/assets/stylesheets/custom_design_v2/_sidebar.scss
@@ -40,4 +40,10 @@
     min-width: 300px;
     max-width: 300px;
   }
+
+  .geozone-affiliation-filter {
+    li {
+      list-style: none;
+    }
+  }
 }
