--- a/app/views/custom/layouts/_header.html.erb
+++ b/app/views/custom/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <% launch_page ||= false %>
-<header>
+<header class="js-stiky-header">
   <div class="top-bar">
     <div class="top-bar-title">
       <%= link_to root_path do %>
